[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-embedded-hal = {  git = "https://github.com/embassy-rs/embassy", rev = "f1f4943ca51e8827146daca950fdf88d5b1e046b", features = ["defmt"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "f1f4943ca51e8827146daca950fdf88d5b1e046b", features = ["defmt"] }
embassy-executor = {  git = "https://github.com/embassy-rs/embassy", rev = "f1f4943ca51e8827146daca950fdf88d5b1e046b", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = {  git = "https://github.com/embassy-rs/embassy", rev = "f1f4943ca51e8827146daca950fdf88d5b1e046b", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
embassy-rp = {  git = "https://github.com/embassy-rs/embassy", rev = "f1f4943ca51e8827146daca950fdf88d5b1e046b", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = {  git = "https://github.com/embassy-rs/embassy", rev = "f1f4943ca51e8827146daca950fdf88d5b1e046b", features = ["defmt"] }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "f1f4943ca51e8827146daca950fdf88d5b1e046b", features = ["defmt", "nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-net-wiznet = {  git = "https://github.com/embassy-rs/embassy", rev = "f1f4943ca51e8827146daca950fdf88d5b1e046b", features = ["defmt"] }
embassy-futures = {  git = "https://github.com/embassy-rs/embassy", rev = "f1f4943ca51e8827146daca950fdf88d5b1e046b"  }
embassy-usb-logger = {  git = "https://github.com/embassy-rs/embassy", rev = "f1f4943ca51e8827146daca950fdf88d5b1e046b" }
embassy-lora = {  git = "https://github.com/embassy-rs/embassy", rev = "f1f4943ca51e8827146daca950fdf88d5b1e046b", features = ["time", "defmt"] }
cyw43 = {   git = "https://github.com/embassy-rs/embassy", rev = "f1f4943ca51e8827146daca950fdf88d5b1e046b", features = ["defmt", "firmware-logs"] }
cyw43-pio = {  git = "https://github.com/embassy-rs/embassy", rev = "f1f4943ca51e8827146daca950fdf88d5b1e046b",  features = ["defmt", "overclock"] }

smart-leds = "0.3.0"

lora-phy = { version = "1" }
lorawan-device = { version = "0.10.0", default-features = false, features = ["async", "external-lora-phy"] }
lorawan = { version = "0.7.3", default-features = false, features = ["default-crypto"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
st7789 = "0.6.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
heapless = "0.7.15"
usbd-hid = "0.6.1"

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
embedded-hal-async = "1.0.0-rc.1"
embedded-hal-bus = { version = "0.1.0-rc.1", features = ["async"] }
embedded-io-async = { version = "0.5.0", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "1.1", features = ["nightly"]}
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }


[patch.crates-io]
lora-phy = { git = "https://github.com/embassy-rs/lora-phy", rev = "1323eccc1c470d4259f95f4f315d1be830d572a3"}

[profile.release]
debug = 2